Ensured that select boxes on firefox dont' have that annoying dotted line.

--- a/resources/css/fabdb.css
+++ b/resources/css/fabdb.css
@@ -6,6 +6,11 @@ html, body {
     height: 100%;
 }
 
+select:-moz-focusring {
+    color: transparent;
+    text-shadow: 0 0 0 #000;
+}
+
 #app {
     height: 100%;
 }
